--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,9 @@
         </activity>
 
         <activity
+            android:name=".ui.activity.FragmentDialogDemo" >
+        </activity>
+        <activity
             android:name=".ui.activity.LoginSignupActivity" >
         </activity>
         <activity
